--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 	<h2 id="ablation" style="text-align: center;">Perception Analyses of Hyperparamters</h2>
 	<div class="table-responsive pt-3">
 		<div class="text-center">
-			<p>The perception analyses of the hyperparamter β.</p>
+			<p>The perception analyses of the hyperparameter β. We select a suitable hyperparamter value to balance the protective perturbation and perturbation imperceptibility.</p>
 		</div>
 		<table class="table table-hover pt-2">
 			<thead>
